# BUPT-Database-Todo

./: LICENSE  README.md  main.py  pyproject.toml  test.py
app/: __init__.py  app.py
app/api/: __init__.py
app/api/auth/: auth.py
app/api/v1/: router.py
app/api/v1/handlers/: __init__.py  shared_todo.py  todo.py  user.py
app/config/: __init__.py
app/models/: __init__.py  sharedtodo.py  todo.py  user.py
app/schemas/: __init__.py  auth.py  todo.py  user.py
app/services/: __init__.py  todo.py  user.py
